@@ -67,3 +67,7 @@ IMPROVEMENT: Added dlsym()/calloc() workaround with mmap().
 01-28-2024
 ==========
 IMPROVEMENT: Removed excessive casting.
+
+01-30-2024
+==========
+IMPROVEMENT: Added checking dlerror in ctors.
